Scaffolded the creation of FilmsController, db context and views for FilmsController

--- a/MvcMovies/appsettings.json
+++ b/MvcMovies/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMoviesContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMoviesContext-58ad4301-2018-416e-ab31-f18741c2c337;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
